Fix initial fontsize setting

--- a/src/tomalec-ace-editor.html
+++ b/src/tomalec-ace-editor.html
@@ -53,7 +53,7 @@
         // initial attributes
             editor.setTheme( this.getAttribute("theme") );
             editor.getSession().setMode( this.getAttribute("mode") );
-            editor.setTheme( this.getAttribute("fontsize") );
+            editor.setFontSize( this.getAttribute("fontsize") );
 
 
         this.editor = editor;
