Update readme, bower.json, and demo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     <iframe src="http://ghbtns.com/github-btn.html?user=tomalec&amp;repo=tomalec-ace-editor&amp;type=watch&amp;count=true&amp;size=medium"
 	allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
     <h1>&lt;tomalec-ace-editor&gt;</h1>
-    <blockquote><p>Custom Element that provides <a href="http://ace.c9.io/">Ace Editor</a></p></blockquote>
+    <blockquote><p>
+    	Even <strong>more</strong> embeddable code editor. 
+		Custom Element - just one tag, and no JS needed to provide <a href="http://ace.c9.io/">Ace</a> 
+		- The High Performance Code Editor</p></blockquote>
     <!-- Using Custom Elements -->
     <div class="code-comparison">
     <section>
