--- a/src/tomalec-ace-editor.html
+++ b/src/tomalec-ace-editor.html
@@ -41,13 +41,15 @@
     // Fires when an instance was inserted into the document
     TomalecAceEditorPrototype.attachedCallback = function() {
 
+            var text = this.childNodes[0];
         var container = document.createElement("div");
             container.id = "tomalec-ace-editor-container";
         // shadowRoot.appendChild(container);
         // Workaround as CSS styles are added to main document, and does not cross Shadow DOM boundry
-            container.innerHTML = this.innerHTML;
-            //this.innerHTML = "";
-            this.appendChild(container);
+            // this.appendChild(container);
+            this.insertBefore(container, this.firstChild);
+            text && container.appendChild(text);
+
 
         var editor = ace.edit(container);
         // initial attributes
@@ -63,7 +65,6 @@
 
         // Observe input textNode changes
         // Could be buggy as editor was also added to Light DOM;
-            var text = this.childNodes[0];
             var observer = new MutationObserver(function(mutations) {
               mutations.forEach(function(mutation) {
                 console.log("observation", mutation.type, arguments, mutations, editor, text);
@@ -72,7 +73,8 @@
                 }
               });
             });
-            observer.observe(text, { characterData: true });
+            text && observer.observe(text, { characterData: true });
+        // container.appendChild(text);
     };
 
     // Fires when an instance was removed from the document
