Rename Component from tomalec-ace-editor to juicy-ace-editor

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>&lt;tomalec-ace-editor&gt;</title>
+    <title>&lt;juicy-ace-editor&gt;</title>
     <link rel="stylesheet" href="http://juicy.github.io/juicy-tile-list/examples/github-markdown.css">
 
     <!-- Importing Web Component's Polyfill -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.2/platform.js"></script>
 
     <!-- Importing Custom Elements -->
-    <link rel="import" href="src/tomalec-ace-editor.html">
+    <link rel="import" href="src/juicy-ace-editor.html">
 	<style type="text/css" media="screen">
 		html,body{
 			height: 100%;
@@ -22,7 +22,7 @@
 	        width: 100%;
 	        height: 40%;
 	    }
-	    tomalec-ace-editor { 
+	    juicy-ace-editor { 
 	    	margin: 15px 15px;
 	        width: 45%;
 	        height: 13em;
@@ -43,11 +43,11 @@
 </head>
 <body>
 <article class="markdown-body">
-    <iframe src="http://ghbtns.com/github-btn.html?user=tomalec&amp;repo=tomalec-ace-editor&amp;type=fork&amp;count=true&amp;size=medium"
+    <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-ace-editor&amp;type=fork&amp;count=true&amp;size=medium"
 allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
-    <iframe src="http://ghbtns.com/github-btn.html?user=tomalec&amp;repo=tomalec-ace-editor&amp;type=watch&amp;count=true&amp;size=medium"
+    <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-ace-editor&amp;type=watch&amp;count=true&amp;size=medium"
 	allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
-    <h1>&lt;tomalec-ace-editor&gt;</h1>
+    <h1>&lt;juicy-ace-editor&gt;</h1>
     <blockquote><p>
     	Even <strong>more</strong> embeddable code editor. 
 		Custom Element - just one tag, and no JS needed to provide <a href="http://ace.c9.io/">Ace</a> 
@@ -56,8 +56,8 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     <div class="code-comparison">
     <section>
 	    <p>Here you have:
-			<pre>&lt;tomalec-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&gt;
-&lt;tomalec-ace-editor&gt;</pre>element.
+			<pre>&lt;juicy-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&gt;
+&lt;juicy-ace-editor&gt;</pre>element.
 		</p>
 		<p>
 			You can switch modes and themes as regular HTML attributes to 
@@ -67,9 +67,9 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
 		</p>
 	</section>
 
-    <tomalec-ace-editor theme="ace/theme/monokai" mode="ace/mode/html">&lt;p&gt;Here you have:
-	&lt;pre&gt;&amp;lt;tomalec-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&amp;gt;
-&amp;lt;/tomalec-ace-editor&amp;gt;&lt;/pre&gt;element.
+    <juicy-ace-editor theme="ace/theme/monokai" mode="ace/mode/html">&lt;p&gt;Here you have:
+	&lt;pre&gt;&amp;lt;juicy-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&amp;gt;
+&amp;lt;/juicy-ace-editor&amp;gt;&lt;/pre&gt;element.
 &lt;/p&gt;
 &lt;p&gt;
 	You can switch modes and themes as regular HTML attributes to 
@@ -77,12 +77,12 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
 		whatever is supported by Ace
 	&lt;/a&gt;
 &lt;/p&gt;
-	</tomalec-ace-editor>
+	</juicy-ace-editor>
 	</div>
 
 
 	<p>Ok, in fact you have seen 
-		<pre>&lt;tomalec-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&gt;&amp;lt;p&amp;gt;Here you have:..</pre>
+		<pre>&lt;juicy-ace-editor theme="ace/theme/monokai" mode="ace/mode/html"&gt;&amp;lt;p&amp;gt;Here you have:..</pre>
 	</p>
 
 	<h3>Looking for a more full-featured demo? Check out the <a href="kitchen-sink.html">kitchen sink</a>.</h3>
