--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -3,18 +3,18 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>&lt;tomalec-ace-editor&gt; Kitchen Sink</title>
+    <title>&lt;juicy-ace-editor&gt; Kitchen Sink</title>
     
     <link rel="stylesheet" href="http://ace.c9.io/build/kitchen-sink/styles.css" type="text/css" media="screen" charset="utf-8">
     <script async="true" src="https://use.edgefonts.net/source-code-pro.js"></script>
     
     <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.2/platform.js"></script>
-    <link rel="import" href="src/tomalec-ace-editor.html">
+    <link rel="import" href="src/juicy-ace-editor.html">
 </head>
 <body>
 <template bind>
 <div id="optionsPanel" style="position:absolute;height:100%;width:260px">
-  <a href="http://tomalec.github.io/tomalec-ace-editor/">
+  <a href="http://juicy.github.io/juicy-ace-editor/">
     <img id="c9-logo" src="http://ace.c9.io/doc/site/images/ace-logo.png" style="width: 134px;margin: 8px 0 0 63px;" alt="Ace Editor">
     <img src="http://webcomponents.org/img/icon-customelements.png" alt="Custom Element" style="position: relative; left: -29px; bottom: -6px;">
   </a>
@@ -255,17 +255,17 @@
   </div>
   </div>
 </div>
-  <tomalec-ace-editor id="editor-container" theme="{{theme}}" mode="{{mode}}" fontsize="{{fontsize}}" readonly="{{readonly}}">Type your code here, to test.
+  <juicy-ace-editor id="editor-container" theme="{{theme}}" mode="{{mode}}" fontsize="{{fontsize}}" readonly="{{readonly}}">Type your code here, to test.
 
-   &lt;tomalec-ace-editor 
+   &lt;juicy-ace-editor 
       theme="{{theme}}"
       mode="{{mode}}" 
       fontsize="{{fontsize}}"
       readonly="{{readonly}}"
       softtabs="{{softtabs}}"
-    &gt;Type your code here... &lt;/tomalec-ace-editor&gt;
+    &gt;Type your code here... &lt;/juicy-ace-editor&gt;
 
-  Sorry I was to lazy to get through http://ace.c9.io/build/kitchen-sink/demo.js ;)</tomalec-ace-editor>
+  Sorry I was to lazy to get through http://ace.c9.io/build/kitchen-sink/demo.js ;)</juicy-ace-editor>
 
 
 <!-- 
