--- a/src/juicy-ace-editor.html
+++ b/src/juicy-ace-editor.html
@@ -6,7 +6,7 @@
         :host{
             display: block;
         }
-        ::content #tomalec-ace-editor-container{
+        ::content #juicy-ace-editor-container{
             width: 100%;
             height: 100%;
             display: block;
@@ -19,7 +19,7 @@
     // Refers to the "importer", which is index.html
     var thatDoc = document;
 
-    // Refers to the "importee", which is src/tomalec-ace-editor.html
+    // Refers to the "importee", which is src/juicy-ace-editor.html
     var thisDoc = document._currentScript.ownerDocument;
 
     // Gets content from <template>
@@ -43,7 +43,7 @@
 
             var text = this.childNodes[0];
         var container = document.createElement("div");
-            container.id = "tomalec-ace-editor-container";
+            container.id = "juicy-ace-editor-container";
         // shadowRoot.appendChild(container);
         // Workaround as CSS styles are added to main document, and does not cross Shadow DOM boundry
             // this.appendChild(container);
@@ -90,7 +90,7 @@
         }
     };
 
-    document.registerElement('tomalec-ace-editor', {
+    document.registerElement('juicy-ace-editor', {
         prototype: TomalecAceEditorPrototype
     });
 }(window, document));
