Revert "Mutation observer is no longer needed, as we moved text node to container."
This reverts commit 2295f91388a9c4512e7221d357e273e2eb18cc01.

--- a/src/juicy-ace-editor.html
+++ b/src/juicy-ace-editor.html
@@ -64,6 +64,18 @@
 
         this.editor = editor;
 
+        // Observe input textNode changes
+        // Could be buggy as editor was also added to Light DOM;
+            var observer = new MutationObserver(function(mutations) {
+              mutations.forEach(function(mutation) {
+                console.log("observation", mutation.type, arguments, mutations, editor, text);
+                if(mutation.type == "characterData"){
+                    editor.setValue(text.data);
+                }
+              });
+            });
+            text && observer.observe(text, { characterData: true });
+        // container.appendChild(text);
     };
 
     // Fires when an instance was removed from the document
