Add customelements icon to the repo

--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -16,7 +16,7 @@
 <div id="optionsPanel" style="position:absolute;height:100%;width:260px">
   <a href="http://juicy.github.io/juicy-ace-editor/">
     <img id="c9-logo" src="http://ace.c9.io/doc/site/images/ace-logo.png" style="width: 134px;margin: 8px 0 0 63px;" alt="Ace Editor">
-    <img src="http://webcomponents.org/img/icon-customelements.png" alt="Custom Element" style="position: relative; left: -29px; bottom: -6px;">
+    <img src="img/icon-customelements.png" alt="Custom Element" style="position: relative; left: -29px; bottom: -6px;">
   </a>
   <div style="position: absolute; overflow: hidden; top:100px; bottom:0">
   <div style="width: 120%; height:100%; overflow-y: scroll">
