Update Polymer do 0.3.3

--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="http://ace.c9.io/build/kitchen-sink/styles.css" type="text/css" media="screen" charset="utf-8">
     <script async="true" src="https://use.edgefonts.net/source-code-pro.js"></script>
     
-    <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.2/platform.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.3/platform.js"></script>
     <link rel="import" href="src/juicy-ace-editor.html">
 </head>
 <body>
 <template bind>
-<div id="optionsPanel" style="position:absolute;height:100%;width:260px">
-  <a href="http://juicy.github.io/juicy-ace-editor/">
-    <img id="c9-logo" src="http://ace.c9.io/doc/site/images/ace-logo.png" style="width: 134px;margin: 8px 0 0 63px;" alt="Ace Editor">
-    <img src="img/icon-customelements.png" alt="Custom Element" style="position: relative; left: -29px; bottom: -6px;">
+<div id="optionsPanel" style="position:absolute;height:100%;width:260px;text-align:right;">
+  <a href="http://juicy.github.io/juicy-ace-editor/" style="color:white;text-decoration:none;">
+    <img id="c9-logo" src="http://ace.c9.io/doc/site/images/ace-logo.png" style="width:134px;margin:8px 0 -3px 63px;" alt="Ace Editor">
+    <img src="img/icon-customelements.png" alt="Custom Element" style="position:relative;left:-29px;bottom:-9px;">
+    by Juicy
   </a>
   <div style="position: absolute; overflow: hidden; top:100px; bottom:0">
   <div style="width: 120%; height:100%; overflow-y: scroll">
