Try to polyfill ::content for IE #1

--- a/src/juicy-ace-editor.html
+++ b/src/juicy-ace-editor.html
@@ -3,10 +3,12 @@
 <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script> -->
 
 <template>
-    <style>
+    <style shim-shadowdom>
         :host{
             display: block;
         }
+
+        polyfill-next-selector { content: ':host #juicy-ace-editor-container'; }
         ::content #juicy-ace-editor-container{
             width: 100%;
             height: 100%;
