--- a/src/juicy-ace-editor.html
+++ b/src/juicy-ace-editor.html
@@ -1,3 +1,8 @@
+<!--
+    Custom Element with Ace code editor
+    http://juicy.github.io/juicy-ace-editor/
+    version: 0.0.3
+-->
 <script src="../ace/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <!-- <script src="../ace/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script> -->
 <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script> -->
