Update theme id as for ajaxorg/ace-builds@1.2.0, #9

--- a/src/juicy-ace-editor.html
+++ b/src/juicy-ace-editor.html
@@ -69,7 +69,7 @@
         var editor = this.editor || ace.edit(container);
 
         // inject base editor styles
-        this.injectTheme('#ace_editor');
+        this.injectTheme('#ace-tm');
 
         // handle theme changes
         editor.renderer.addEventListener("themeLoaded", this.onThemeLoaded.bind(this));
